@@ -1,3 +1,8 @@
+Wed Aug 13 19:44:10 2003  Joern Thyssen  <jth@gnubg.org>
+
+	* gtktheory.c (GTKShowTheory): fix i18n problem.
+	(reported by Jim)
+
 Wed Aug 13 19:09:18 2003  Joern Thyssen  <jth@gnubg.org>
 
 	* gtkboard.c (button_press_event): right clicks to 
